added EntityImpl