@@ -82,7 +82,7 @@ public class TrueTypeFont implements Font {
 	public TrueTypeFont(java.awt.Font font, boolean antiAlias) {
 		this(font, antiAlias, null);
 	}
-	
+
 	public TrueTypeFont() {
 		this(new java.awt.Font(null, Font.PLAIN, 12), true);
 	}
@@ -101,8 +101,7 @@ public class TrueTypeFont implements Font {
 		// Create a temporary image to extract the character's size
 		BufferedImage tempfontImage = new BufferedImage(1, 1, BufferedImage.TYPE_INT_ARGB);
 		Graphics2D g = (Graphics2D) tempfontImage.getGraphics();
-		if (antiAlias == true)
-			g.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
+		if (antiAlias == true) g.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
 		g.setFont(font);
 		fontMetrics = g.getFontMetrics();
 		int charwidth = fontMetrics.charWidth(ch) + 8;
@@ -115,8 +114,7 @@ public class TrueTypeFont implements Font {
 		BufferedImage fontImage;
 		fontImage = new BufferedImage(charwidth, charheight, BufferedImage.TYPE_INT_ARGB);
 		Graphics2D gt = (Graphics2D) fontImage.getGraphics();
-		if (antiAlias == true)
-			gt.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
+		if (antiAlias == true) gt.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
 		gt.setFont(font);
 
 		gt.setColor(Color.BLACK);
@@ -170,10 +168,8 @@ public class TrueTypeFont implements Font {
 				newIntObject.storedX = positionX;
 				newIntObject.storedY = positionY;
 
-				if (newIntObject.height > fontHeight)
-					fontHeight = newIntObject.height;
-				if (newIntObject.height > rowHeight)
-					rowHeight = newIntObject.height;
+				if (newIntObject.height > fontHeight) fontHeight = newIntObject.height;
+				if (newIntObject.height > rowHeight) rowHeight = newIntObject.height;
 
 				// Draw it here
 				g.drawImage(fontImage, positionX, positionY, null);
@@ -253,7 +249,7 @@ public class TrueTypeFont implements Font {
 			if (charCurrent < 256) {
 				intObject = charArray[charCurrent];
 			} else {
-				intObject = (IntObject) customChars.get(new Character((char) charCurrent));
+				intObject = (IntObject) customChars.get(Character.valueOf((char) charCurrent));
 			}
 
 			if (intObject != null) {
@@ -279,11 +275,16 @@ public class TrueTypeFont implements Font {
 					// g.drawImage(fontImage, (int) (totalwidth * scaleX + x), (int) (startY * scaleY + y), (int) ((totalwidth + intObject.width) * scaleX + x), (int) ((startY + intObject.height) * scaleY + y), intObject.storedX, intObject.storedY, intObject.storedX + intObject.width, intObject.storedY + intObject.height);
 					g.drawImage(fontImage, (int) (totalwidth * scaleX + x), (int) (startY * scaleY + y), (int) ((totalwidth + intObject.width) * scaleX + x), (int) ((startY + intObject.height) * scaleY + y), intObject.storedX, intObject.storedY, intObject.storedX + intObject.width, intObject.storedY + intObject.height);
 					if (d > 0) totalwidth += (intObject.width - c) * d;
+					// System.out.println("new letter");
+					// System.out.println("x: " + (int) (totalwidth * scaleX + x));
+					// System.out.println("y: " +(int) (startY * scaleY + y));
+					// System.out.println("width: "+(int) ((totalwidth + intObject.width) * scaleX + x));
+					// System.out.println("height: " + (int) ((startY + intObject.height) * scaleY + y));
 				}
 				i += d;
-
 			}
 		}
+		// System.exit(0);
 	}
 
 	/*
